Updated index, apply, contact pages & footer

--- a/about.html
+++ b/about.html
@@ -132,8 +132,7 @@
                     <p>Empowering Tanzanian students to achieve their dreams through education and creating pathways to global opportunities.</p>
                     <div class="footer-social">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/rafikiglobal.scholars?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
@@ -155,9 +154,8 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> Dar es Salaam, Tanzania</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C., Dar es Salaam, Tanzania</p>
                     <p><i class="fas fa-envelope"></i> info@rafikiglobalscholars.org</p>
-                    <p><i class="fas fa-phone"></i> +255 XXX XXX XXX</p>
                 </div>
             </div>
             
