--- a/achievements.html
+++ b/achievements.html
@@ -67,11 +67,11 @@
             <!-- Summary Stats -->
             <div class="achievement-stats">
                 <div class="stat-item">
-                    <div class="stat-number">5</div>
+                    <div class="stat-number" data-target="5">0</div>
                     <div class="stat-label">Total Acceptances</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">$1.34M</div>
+                    <div class="stat-number" data-target="1340000" data-prefix="$" data-suffix="" data-format="currency">$0</div>
                     <div class="stat-label">Total Scholarships Raised</div>
                 </div>
             </div>
@@ -84,8 +84,9 @@
                     </div>
                     <div class="student-info">
                         <h3 class="university-name">Salimini Rume - New York University Abu Dhabi (NYUAD)</h3>
+                        <p class="student-hometown">Hometown: Iramba, Singida</p>
                         <div class="student-story-text">
-                            <p>Meet our first scholar who achieved their dream of attending Harvard University. Through dedication, hard work, and the support of RGS mentorship program, they overcame financial barriers and academic challenges to secure admission to one of the world's most prestigious institutions. Their journey from a small town in Tanzania to the halls of Harvard is a testament to the power of education and determination.</p>
+                            <p>From humble beginnings to earning a full scholarship to NYU Abu Dhabi, Salimini’s journey is a reflection of his unwavering determination and resilience. Despite countless challenges, he never stopped believing in himself and his dreams. His hard work and dedication shine through, and it’s no surprise that his personal statement spoke volumes. Congratulations to you Salimini! Your journey is just beginning, and we can’t wait to see all the amazing things you’ll achieve. </p>
                         </div>
                     </div>
                 </div>
@@ -96,8 +97,9 @@
                     </div>
                     <div class="student-info">
                         <h3 class="university-name">Derick Mushi - Tufts University</h3>
+                        <p class="student-hometown">Hometown: Singida, Tanzania</p>
                         <div class="student-story-text">
-                            <p>Our second scholar's acceptance to Stanford University represents years of preparation and commitment. With a passion for technology and innovation, they participated in our SAT preparation program and received comprehensive college application guidance. Their success story demonstrates how proper mentorship and resources can transform dreams into reality, opening doors to world-class education opportunities.</p>
+                            <p>Derick’s successful journey to Tufts University on a full scholarship is a powerful testament to what hard work, consistency, and vision can achieve! From his outstanding academic, personal and social excellence, Derick has been a great inspiration at Rafiki (RGS) and his immediate community. Tufts is incredibly fortunate to have him. His story, his spirit, and everything he’s overcome all speaks for itself. Congratulations, Derick! Your journey is truly inspiring, and your future is full of promise.</p>
                         </div>
                     </div>
                 </div>
@@ -108,8 +110,9 @@
                     </div>
                     <div class="student-info">
                         <h3 class="university-name">Raymond Miho - New York University Abu Dhabi (NYUAD)</h3>
+                        <p class="student-hometown">Hometown: Kihanga, Iringa</p>
                         <div class="student-story-text">
-                            <p>This remarkable scholar's journey to MIT showcases exceptional academic excellence and innovative thinking. Through our comprehensive support program, they developed strong STEM skills and leadership qualities that caught the attention of MIT admissions. Their acceptance comes with a full scholarship, ensuring that financial constraints won't limit their potential to contribute to technological advancement.</p>
+                            <p>Congratulations to Raymond for being accepted to NYU Abu Dhabi on a full scholarship! At Rafiki, he was always consistent and committed to the work. He stayed focused, pushed through challenges, and brought excellence to everything he worked on. Well done, Raymond! You’ve worked so hard for this, and we’re so proud to see it all come together.</p>
                         </div>
                     </div>
                 </div>
@@ -120,8 +123,9 @@
                     </div>
                     <div class="student-info">
                         <h3 class="university-name">Mike Maeda - Alfred University</h3>
+                        <p class="student-hometown">Hometown: Njiro, Arusha</p>
                         <div class="student-story-text">
-                            <p>Our fourth scholar's acceptance to Yale University highlights their exceptional academic performance and leadership potential. Through our mentorship program, they developed critical thinking skills and a global perspective that impressed Yale's admissions committee. Their success story inspires other Tanzanian students to pursue their educational dreams, knowing that with the right support, anything is possible.</p>
+                            <p>Huge congratulations to Mike on his acceptance to Alfred University! Mike always showed up with a curious mind and spirit that lifted the whole group. He was humble, respectful, and always energized to grow at every stage of his application process. Working with him was a true pleasure. We have no doubt he’ll bring the same energy at Alfred! Rafiki is so proud and wishes him all the best!</p>
                         </div>
                     </div>
                 </div>
@@ -132,8 +136,9 @@
                     </div>
                     <div class="student-info">
                         <h3 class="university-name">Tifanny Elangwa - Minerva University</h3>
+                        <p class="student-hometown">Hometown: Mbeya, Tanzania</p>
                         <div class="student-story-text">
-                            <p>The fifth scholar's acceptance to Princeton University completes our remarkable 2024 success story. Their journey exemplifies resilience and academic excellence, overcoming numerous challenges to achieve this prestigious acceptance. With comprehensive scholarship support, they will pursue their studies in international relations, with plans to return to Tanzania and contribute to the country's development through policy and leadership.</p>
+                            <p>Meet our scholar, Tiffany Elangwa, who has been admitted to Minerva University. Her achievement reflects years of hard work, focus, and an unshakable belief in her potential. From Tanzania to a global university, Tiffany’s journey is a powerful example of what’s possible when talent meets discipline and drive. Her acceptance to Minerva is a personal milestone and a great moment of pride for all who have walked alongside her. Congratulations Tiffany!</p>
                         </div>
                     </div>
                 </div>
@@ -153,8 +158,7 @@
                     <p>Empowering Tanzanian students to achieve their dreams through education and creating pathways to global opportunities.</p>
                     <div class="footer-social">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/rafikiglobal.scholars?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
@@ -176,9 +180,8 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> Dar es Salaam, Tanzania</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C., Dar es Salaam, Tanzania</p>
                     <p><i class="fas fa-envelope"></i> info@rafikiglobalscholars.org</p>
-                    <p><i class="fas fa-phone"></i> +255 XXX XXX XXX</p>
                 </div>
             </div>
             
