--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <i class="fas fa-graduation-cap"></i>
             </div>
             <h1 class="home-title">Rafiki Global Scholars</h1>
-            <p class="home-tagline">Supporting High-Achieving, Low-Income Tanzanian Students To Gain Admission & Scholarships in Top Universities. </p>
+            <p style="font-size: 18px;" class="home-tagline">Supporting High-Achieving, Low-Income Tanzanian Students To Gain Admission & Scholarships in Top Universities. </p>
         </div>
     </main>
 
@@ -73,8 +73,7 @@
                     <p>Supporting High-Achieving, Low-Income Tanzanian Students To Gain Admission & Scholarships in Top Universities. </p>
                     <div class="footer-social">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/rafikiglobal.scholars?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
@@ -96,9 +95,8 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> Dar es Salaam, Tanzania</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C., Dar es Salaam, Tanzania</p>
                     <p><i class="fas fa-envelope"></i> info@rafikiglobalscholars.org</p>
-                    <p><i class="fas fa-phone"></i> +255 XXX XXX XXX</p>
                 </div>
             </div>
             <div class="footer-bottom">
