--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <div class="footer-section">
                     <h4>Get Involved</h4>
                     <ul>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="apply.html">Apply Now</a></li>
+                        <li><a href="/contact">Contact Us</a></li>
+                        <li><a href="/apply">Apply Now</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
