corrected Founder 3's description

--- a/team.html
+++ b/team.html
@@ -97,7 +97,7 @@
                     <div class="founder-info">
                         <h3 class="founder-name">Isaya Rukamya</h3>
                         <p class="founder-school">Harvard University '27</p>
-                        <p class="founder-study">Computer Science & Economics A.B</p>
+                        <p class="founder-study">Computer Science & Economics A.B.</p>
                         <p class="founder-email">isayacr@rafikiglobalsch.org</p>
                     </div>
                 </div>
