Update scholar hometowns in the  achievements page

--- a/achievements.html
+++ b/achievements.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="student-info">
                         <h3 class="university-name">Salimini Rume - New York University Abu Dhabi (NYUAD)</h3>
-                        <p class="student-hometown">Hometown: Iramba, Singida</p>
+                        <p class="student-hometown">Hometown: Ghata, Singida</p>
                         <div class="student-story-text">
                             <p>From humble beginnings to earning a full scholarship to NYU Abu Dhabi, Salimini’s journey is a reflection of his unwavering determination and resilience. Despite countless challenges, he never stopped believing in himself and his dreams. His hard work and dedication shine through, and it’s no surprise that his personal statement spoke volumes. Congratulations to you Salimini! Your journey is just beginning, and we can’t wait to see all the amazing things you’ll achieve. </p>
                         </div>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="student-info">
                         <h3 class="university-name">Derick Mushi - Tufts University</h3>
-                        <p class="student-hometown">Hometown: Singida, Tanzania</p>
+                        <p class="student-hometown">Hometown: Moshi, Kilimanjaro</p>
                         <div class="student-story-text">
                             <p>Derick’s successful journey to Tufts University on a full scholarship is a powerful testament to what hard work, consistency, and vision can achieve! From his outstanding academic, personal and social excellence, Derick has been a great inspiration at Rafiki (RGS) and his immediate community. Tufts is incredibly fortunate to have him. His story, his spirit, and everything he’s overcome all speaks for itself. Congratulations, Derick! Your journey is truly inspiring, and your future is full of promise.</p>
                         </div>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="student-info">
                         <h3 class="university-name">Tifanny Elangwa - Minerva University</h3>
-                        <p class="student-hometown">Hometown: Mbeya, Tanzania</p>
+                        <p class="student-hometown">Hometown: Same, Kilimanjaro</p>
                         <div class="student-story-text">
                             <p>Meet our scholar, Tiffany Elangwa, who has been admitted to Minerva University. Her achievement reflects years of hard work, focus, and an unshakable belief in her potential. From Tanzania to a global university, Tiffany’s journey is a powerful example of what’s possible when talent meets discipline and drive. Her acceptance to Minerva is a personal milestone and a great moment of pride for all who have walked alongside her. Congratulations Tiffany!</p>
                         </div>
