--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">About Rafiki Global Scholars</h2>
-                <p class="section-subtitle">Building bridges to higher education in Tanzania</p>
+                <p class="section-subtitle">Bridging the Gap to Elite Higher Education</p>
             </div>
             
             <!-- Our Story Section -->
