Changed to new logo

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <div class="logo-img">
-                    <i class="fas fa-graduation-cap" style="font-size: 2rem; color: var(--primary-color);"></i>
+                    <img src="assets/rgs_logo.png" alt="RGS Logo">
                 </div>
                 <span class="logo-text">RGS</span>
             </div>
@@ -115,7 +115,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <i class="fas fa-graduation-cap" style="font-size: 2rem;"></i>
+                        <img src="assets/rgs_logo.png" alt="RGS Logo">
                         <span>Rafiki Global Scholars</span>
                     </div>
                     <p>Empowering Tanzanian students to achieve their dreams through education and creating pathways to global opportunities.</p>
