--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <div class="logo-img">
-                    <i class="fas fa-graduation-cap" style="font-size: 2rem; color: var(--primary-color);"></i>
+                    <img src="assets/rgs_logo.png" alt="RGS Logo">
                 </div>
                 <span class="logo-text">RGS</span>
             </div>
@@ -126,7 +126,7 @@
     <main class="home-page">
         <div class="home-content">
             <div class="home-logo-icon">
-                <i class="fas fa-graduation-cap"></i>
+                <img src="assets/rgs_logo.png" alt="RGS Logo">
             </div>
             <h1 class="home-title">Rafiki Global Scholars</h1>
             <p style="font-size: 18px;" class="home-tagline">Supporting High-Achieving, Low-Income Tanzanian Students To Gain Admission & Scholarships in Top Universities. </p>
@@ -139,7 +139,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <i class="fas fa-graduation-cap" style="font-size: 2rem;"></i>
+                        <img src="assets/rgs_logo.png" alt="RGS Logo">
                         <span>Rafiki Global Scholars</span>
                     </div>
                     <p>Supporting High-Achieving, Low-Income Tanzanian Students To Gain Admission & Scholarships in Top Universities. </p>
