--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Email</h4>
-                            <p>info@rafikiglobalscholars.org</p>
+                            <p>info@rafikiglobalsch.org</p>
                             <p>For inquiries, partnerships, or support, please reach out to us via email.</p>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <p><i class="fas fa-map-marker-alt"></i> Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C., Dar es Salaam, Tanzania</p>
-                    <p><i class="fas fa-envelope"></i> info@rafikiglobalscholars.org</p>
+                    <p><i class="fas fa-envelope"></i> info@rafikiglobalsch.org</p>
                 </div>
             </div>
             
