--- a/achievements.html
+++ b/achievements.html
@@ -185,7 +185,7 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <p><i class="fas fa-map-marker-alt"></i> Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C., Dar es Salaam, Tanzania</p>
-                    <p><i class="fas fa-envelope"></i> info@rafikiglobalscholars.org</p>
+                    <p><i class="fas fa-envelope"></i> info@rafikiglobalsch.org</p>
                 </div>
             </div>
             
