--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         "addressLocality": "Dar es Salaam",
         "addressCountry": "TZ"
       },
-      "email": "info@rafikiglobalscholars.org",
+      "email": "info@rafikiglobalsch.org",
       "areaServed": "Tanzania",
       "serviceType": [
         "College Preparation",
@@ -168,7 +168,7 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <p><i class="fas fa-map-marker-alt"></i> Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C., Dar es Salaam, Tanzania</p>
-                    <p><i class="fas fa-envelope"></i> info@rafikiglobalscholars.org</p>
+                    <p><i class="fas fa-envelope"></i> info@rafikiglobalsch.org</p>
                 </div>
             </div>
             <div class="footer-bottom">
