corrects careen's email

--- a/team.html
+++ b/team.html
@@ -78,7 +78,7 @@
                         <h3 class="founder-name">Careen Mwenisongole</h3>
                         <p class="founder-school">MIT '27</p>
                         <p class="founder-study">AI & Decision Making B.S</p>
-                        <p class="founder-email">careennm@rafikiglobalsch.org</p>
+                        <p class="founder-email">careenm@rafikiglobalsch.org</p>
                     </div>
                 </div>
 
