--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                         <div class="contact-details">
                             <h4>Address</h4>
                             <p>Rafiki Global Scholars</p>
-                            <p>Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C.</p>
+                            <p>Policy Forum, Tancom St, Rose Garden Road, Mikocheni</p>
                             <p>Dar es Salaam, Tanzania</p>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C., Dar es Salaam, Tanzania</p>
+                    <p><i class="fas fa-map-marker-alt"></i>Policy Forum, Tancom St, Rose Garden Road, Mikocheni, Dar es Salaam, Tanzania</p>
                     <p><i class="fas fa-envelope"></i> info@rafikiglobalsch.org</p>
                 </div>
             </div>
