--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       "foundingDate": "2023",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C.",
+        "streetAddress": "Policy Forum, Tancom St, Rose Garden Road, Mikocheni",
         "addressLocality": "Dar es Salaam",
         "addressCountry": "TZ"
       },
@@ -167,7 +167,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C., Dar es Salaam, Tanzania</p>
+                    <p><i class="fas fa-map-marker-alt"></i>Policy Forum, Tancom St, Rose Garden Road, Mikocheni, Dar es Salaam, Tanzania</p>
                     <p><i class="fas fa-envelope"></i> info@rafikiglobalsch.org</p>
                 </div>
             </div>
