--- a/team.html
+++ b/team.html
@@ -111,7 +111,7 @@
                         <img src="assets/team/zuhura.jpg" alt="Zuhura Sappi" class="founder-photo">
                     </div>
                     <div class="founder-info">
-                        <h3 class="founder-name">Zuhura Sappi</h3>
+                        <h3 class="founder-name">Zuhura Sapi</h3>
                         <p class="founder-school">UCL '26</p>
                         <p class="founder-study">Pharmacy Mpharm</p>
                         <p class="founder-email">zuhuras@rafikiglobalsch.org</p>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> Haile Selassie Road, Off Mwaya Street, Masaki Plot No. 1387 C., Dar es Salaam, Tanzania</p>
+                    <p><i class="fas fa-map-marker-alt"></i>Policy Forum, Tancom St, Rose Garden Road, Mikocheni, Dar es Salaam, Tanzania</p>
                     <p><i class="fas fa-envelope"></i> info@rafikiglobalsch.org</p>
                 </div>
             </div>
